--- a/Movie_Recommendation_System_using_Machine_Learning_with_Python.ipynb
+++ b/Movie_Recommendation_System_using_Machine_Learning_with_Python.ipynb
@@ -54,7 +54,7 @@
       },
       "source": [
         "# loading the data from the csv file to apandas dataframe\n",
-        "movies_data = pd.read_csv('/content/movies.csv')"
+        "movies_data = pd.read_csv('/content/drive/MyDrive/movies.csv')"
       ],
       "execution_count": null,
       "outputs": []
